--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "expo-web-browser": "~14.0.2",
     "formik": "^2.4.6",
     "formik-validator-zod": "^2.2.0",
+    "jwt-decode": "^4.0.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
