--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
+    "rrule": "^2.8.1",
     "zod": "^3.24.2",
     "zod-formik-adapter": "^1.3.0"
   },
