--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Temp-o-s",
-    "slug": "Temp-o-s",
+    "name": "Tempo",
+    "slug": "Tempo",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/logo.png",
