style: :art: Updated error messages to use console.error, adjusted component styles, and improved point handling in the calendar to avoid duplicates. Changed the app slug in app.json.

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "Tempo",
-    "slug": "Tempo",
+    "slug": "Temp-o-s",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/logo.png",
