--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@react-navigation/stack": "^7.1.1",
     "@tanstack/react-query": "^5.72.2",
     "dayjs": "^1.11.13",
-    "expo": "53.0.22",
+    "expo": "^54.0.0",
     "expo-blur": "~14.1.5",
     "expo-constants": "~17.1.7",
     "expo-font": "~13.3.2",
