--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/metro-runtime": "^6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@hookform/resolvers": "^5.0.1",
+    "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@react-navigation/bottom-tabs": "^7.2.0",
@@ -28,6 +30,7 @@
     "expo": "54.0.6",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.8",
+    "expo-dev-client": "~6.0.12",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-linking": "~8.0.8",
@@ -55,6 +58,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
+    "react-native-worklets": "^0.5.1",
     "rrule": "^2.8.1",
     "zod": "^3.24.2",
     "zod-formik-adapter": "^1.3.0"
