--- a/package.json
+++ b/package.json
@@ -16,22 +16,20 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@hookform/resolvers": "^5.0.1",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
-    "@react-navigation/bottom-tabs": "^7.2.0",
-    "@react-navigation/native": "^7.0.14",
-    "@react-navigation/stack": "^7.1.1",
     "@tanstack/react-query": "^5.72.2",
     "dayjs": "^1.11.13",
-    "expo": "54.0.6",
+    "expo": "54.0.7",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.8",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
     "expo-linking": "~8.0.8",
-    "expo-router": "~6.0.3",
+    "expo-router": "~6.0.4",
     "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "expo-symbols": "~1.0.7",
@@ -55,6 +53,7 @@
     "react-native-vector-icons": "^10.2.0",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
+    "react-native-worklets": "0.5.1",
     "rrule": "^2.8.1",
     "zod": "^3.24.2",
     "zod-formik-adapter": "^1.3.0"
@@ -69,6 +68,9 @@
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
     "typescript": "~5.9.2"
+  },
+  "resolutions": {
+    "react-native-safe-area-context": "~5.6.0"
   },
   "private": true,
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
