--- a/app.json
+++ b/app.json
@@ -4,7 +4,7 @@
     "slug": "Temp-o-s",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/logo.png",
+    "icon": "./assets/icon_1.png",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
