--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "postinstall": "patch-package"
   },
   "jest": {
     "preset": "jest-expo"
@@ -43,7 +44,7 @@
     "react-native": "0.81.4",
     "react-native-calendars": "^1.1310.0",
     "react-native-chart-kit": "^6.12.0",
-    "react-native-dropdown-picker": "^5.4.6",
+    "react-native-dropdown-picker": "5.4.6",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.13.1",
     "react-native-reanimated": "~4.1.0",
@@ -65,6 +66,8 @@
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~54.0.11",
+    "patch-package": "^8.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "react-native-svg-transformer": "^1.5.0",
     "react-test-renderer": "18.3.1",
     "typescript": "~5.9.2"
