--- a/package.json
+++ b/package.json
@@ -20,12 +20,14 @@
     "@expo/metro-runtime": "~6.1.2",
     "@expo/vector-icons": "^15.0.2",
     "@hookform/resolvers": "^5.0.1",
+    "@notifee/react-native": "^9.1.8",
     "@react-native-async-storage/async-storage": "2.2.0",
     "@react-native-community/datetimepicker": "8.4.4",
     "@tanstack/react-query": "^5.72.2",
     "dayjs": "^1.11.13",
     "expo": "~54.0.10",
     "expo-blur": "~15.0.7",
+    "expo-build-properties": "~1.0.9",
     "expo-constants": "~18.0.9",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
